Fix vertical alignment on single-line list items with images

--- a/Cloudy.CMS.UI/wwwroot/ListSupport/list.scss
+++ b/Cloudy.CMS.UI/wwwroot/ListSupport/list.scss
@@ -72,7 +72,7 @@ cloudy-ui-list-item-content {
 cloudy-ui-list-item-text-container {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    justify-content: center;
     padding: 12px 0;
 }
 
